RESOLVED FIXED83251
IsCommentNode flags is a waste.
https://bugs.webkit.org/show_bug.cgi?id=83251
Summary IsCommentNode flags is a waste.
Hajime Morrita
Reported 2012-04-04 23:30:02 PDT
Nobody in WebCore uses Node::isComment() except debug helper routines. We could remove it and save a bit.
Attachments
Patch (6.27 KB, patch)
2012-04-04 23:36 PDT, Hajime Morrita
no flags
Archive of layout-test-results from ec2-cr-linux-02 (6.81 MB, application/zip)
2012-04-05 00:56 PDT, WebKit Review Bot
no flags
Patch for landing (6.66 KB, patch)
2012-04-05 02:02 PDT, Hajime Morrita
no flags
Patch for landing (6.66 KB, patch)
2012-04-05 03:12 PDT, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2012-04-04 23:36:58 PDT
Hajime Morrita
Comment 2 2012-04-04 23:37:56 PDT
Comment on attachment 135763 [details] Patch Hi Kent-san, could you take a look at this trivial change?
Hajime Morrita
Comment 3 2012-04-05 00:30:09 PDT
Woa, Ryosuke is up. Thanks for the quick review :-)
WebKit Review Bot
Comment 4 2012-04-05 00:56:14 PDT
Comment on attachment 135763 [details] Patch Attachment 135763 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12337186 New failing tests: fast/forms/textarea-live-pseudo-selectors.html fast/dom/HTMLElement/attr-dir-auto-text-form-control-child.html fast/dom/HTMLElement/attr-dir-value-change.html fast/dom/HTMLElement/attr-dir-auto-change-child-node.html fast/text/international/bdi-dir-default-to-auto.html fast/dom/HTMLElement/attr-dir-auto-change-text.html fast/dom/HTMLElement/attr-dir-auto-remove-add-children.html fast/text/international/bdi-neutral-wrapped.html fast/dom/HTMLElement/attr-dir-auto.html fast/dom/HTMLElement/attr-dir-auto-change-before-text-node.html
WebKit Review Bot
Comment 5 2012-04-05 00:56:20 PDT
Created attachment 135773 [details] Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Hajime Morrita
Comment 6 2012-04-05 02:02:23 PDT
Created attachment 135785 [details] Patch for landing
WebKit Review Bot
Comment 7 2012-04-05 02:07:26 PDT
Comment on attachment 135785 [details] Patch for landing Rejecting attachment 135785 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12339215
Hajime Morrita
Comment 8 2012-04-05 03:12:10 PDT
Created attachment 135794 [details] Patch for landing
WebKit Review Bot
Comment 9 2012-04-05 04:50:54 PDT
Comment on attachment 135794 [details] Patch for landing Clearing flags on attachment: 135794 Committed r113312: <http://trac.webkit.org/changeset/113312>
WebKit Review Bot
Comment 10 2012-04-05 04:51:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.