IsCommentNode flags is a waste. https://bugs.webkit.org/show_bug.cgi?id=83251

Reviewed by Ryosuke Niwa.

Effectively nobody uses it. To save a precious NodeFlags bit, this
change removes NodeFlags::IsCommentFlag and its companion mehtod
Node::isCommentNode().

No new tests. No behaviour change.

* dom/CharacterData.h:
(WebCore::CharacterData::CharacterData):
* dom/Comment.cpp:
(WebCore::Comment::Comment):
* dom/Node.h:
* rendering/RenderTreeAsText.cpp:
(WebCore::getTagName):
This was the only client of Node::isCommentNode(). Replaced it with nodeType() call.


Canonical link: https://commits.webkit.org/100648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113312 268f45cc-cd09-0410-ab3c-d52691b4dbfc